--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DISCOGS_CONSUMER_KEY='ta_consumer_key'
-DISCOGS_CONSUMER_SECRET='ton_consumer_secret'
-DISCOGS_USERNAME='ton_pseudo_discogs'
+DISCOGS_CONSUMER_KEY='consumer_key'
+DISCOGS_CONSUMER_SECRET='consumer_secret'
+DISCOGS_USERNAME='pseudo_discogs'
